--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body className="'bg-base">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
