--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body className="'bg-base">
+  <body class="bg-base">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
